--- a/templates/series_results.html
+++ b/templates/series_results.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Series Results</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/results.css') }}">
 </head>
@@ -33,7 +34,7 @@
         
         <div id="navigation-buttons">
             <button id="back-btn" class="btn btn-secondary">Back</button>
-          
+        
             <a href="/" class="btn btn-primary">New Simulation</a>
         </div>
     </div>
