--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Simulator - Setup</title>
+
+    <link rel="icon" href="{{ url_for('static', filename='logos/Logo.png') }}">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
