Forcando o envio do favicon e mudanca de titulo

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="setup-container">
         <header>
-            <h1>Valorant Match Simulator</h1>
+            <h1>Valorant Game Setup</h1>
             <p>Select the teams and match settings to begin</p>
         </header>
 
