--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorant Simulator</title>
+    <title>Valorant Sim</title>
 
     <link rel="icon" href="{{ url_for('static', filename='logos/Logo.png') }}">
 
